--- a/hardskills/modulohtml/lojapet/index.html
+++ b/hardskills/modulohtml/lojapet/index.html
@@ -38,27 +38,91 @@
                     <span>
                         <span id="search">
                             <input type="text" placeholder="Pesquisar..." />
-                            <div>
-                                <button></button>
-                            </div>
+                            <button>
+                                <div></div>
+                            </button>
                         </span>
                         <div id="phone">
-                            
+                            <h4>Ligue</h4>
+                            <h5>(11) 3456-7890</h5>
                         </div>
                     </span>
                 </div>
                 <nav>
-                    <ul>
-                        <li>Loja</li>
+                    <ul id="mainnav">
+                        <li>LOJA</li>
+                        <li>CÃES</li>
+                        <li>GATOS</li>
+                        
+                        <li>PÁSSAROS</li>
+                        <li>PEIXES</li>
+
+                        <li>PEQUENINOS</li>
+                        <li>RÉPTEIS</li>
+
+                        <li>CONTATO</li>
+                    </ul>
+                    <ul id="personal">
+                        <li>F</li>
+                        <li>Y</li>
+                        <li>I</li>
+                        <li>Login</li>
+                        <li>CART</li>
                     </ul>
                 </nav>
             </section>
         </div>
         <main>
+            <section id="banner">
 
+            </section>
+            <section id="beneficios" class="slimside">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </section>
+            <section id="mosaico1" class="slimside">
+                <li><div></div></li>
+                <li></li>
+                <li></li>
+            </section>
+            <section id="mosaico2" class="slimside">
+                <li></li>
+                <li></li>
+            </section>
+            <section id="mosaico3" class="slimside">
+                <li></li>
+                <li></li>
+            </section>
+            <span id="hr" class="slimside"></span>
+            <section id="previaloja" class="slimside2">
+                <h3 class="sectiontitle">O Melhor para os Pets</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <a>Ver mais</a>
+            </section>
+            <section id="parcerias" class="slimside2">
+                <div>
+                    <h3 class="sectiontitle">Melhores Marcas e Preços</h3>
+                </div>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
         </main>
         <footer>
-
+            <section></section>
+            <div></div>
         </footer>
     </body>
 </html>
