--- a/hardskills/modulohtml/lojapet/index.html
+++ b/hardskills/modulohtml/lojapet/index.html
@@ -63,11 +63,14 @@
                         <li>CONTATO</li>
                     </ul>
                     <ul id="personal">
-                        <li>F</li>
-                        <li>Y</li>
-                        <li>I</li>
-                        <li>Login</li>
-                        <li>CART</li>
+                        <li><img src="images/icons/icon-facebook.webp" /></li>
+                        <li><img src="images/icons/icon-youtube.webp" /></li>
+                        <li><img src="images/icons/icon-instagram.webp" /></li>
+                        <li>
+                            <img src="images/svgs/people.svg" width="25px"/>
+                            Login
+                        </li>
+                        <li><img src="images/svgs/carrinho.svg" width="49px"/></li>
                     </ul>
                 </nav>
             </section>
@@ -77,13 +80,42 @@
 
             </section>
             <section id="beneficios" class="slimside">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <div>
+                        <span id="caminhaoicon"></span>
+                        <h4>FRETE GRÁTIS</h4>
+                        <h5>Confira Condições</h5>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span id="localizacaoicon"></span>
+                        <h4>ENVIAMOS</h4>
+                        <h5>para todo Brasil</h5>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span id="cartaoicon"></span>
+                        <h4>ATÉ 12X SEM JUROS</h4>
+                        <h5>10% Off no Boleto</h5>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span id="cadeadoicon"></span>
+                        <h4>100% SEGURO</h4>
+                        <h5>Certificado SSL</h5>
+                    </div>
+                </li>
             </section>
             <section id="mosaico1" class="slimside">
-                <li><div></div></li>
+                <li>
+                    <div>
+                        <h3>BOM DE HOJE</h3>
+                        <h4>50% de desconto - cães</h4>
+                    </div>
+                </li>
                 <li></li>
                 <li></li>
             </section>
