--- a/hardskills/modulohtml/lojapet/index.html
+++ b/hardskills/modulohtml/lojapet/index.html
@@ -279,7 +279,7 @@
                             
                         </div>
                         <span class="item-title">Sou um produto</span>
-                        <span class="item-cost">R$ 6,00</span>
+                        <span class="item-price">R$ 6,00</span>
                         <div class="item-quanty">
                             <button></button>
                             <input type="number" min="1" max="99999" step="1" value="1" />
