--- a/hardskills/modulohtml/restaurante/index.html
+++ b/hardskills/modulohtml/restaurante/index.html
@@ -6,21 +6,61 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <div id="splash">
-            <span class="svgimg">
-                <h4>PEÇA</h4>
-                <h4>ONLINE</h4>
-            </span>
+        <div class="topbar">
+            <div id="splash">
+                <span class="svgimg">
+                    <h4>PEÇA</h4>
+                    <h4>ONLINE</h4>
+                </span>
+            </div>
+            <header>
+                
+            </header>
+            <div id="social">
+
+            </div>
         </div>
-        <div id="logo">
-            <h1>Burguer</h1>
-            <span class="svgimg"><h4>GOURMET</h4></span>
-            <h4>SÃO PAULO / DESDE 2007</h4>
-        </div>
-        <div class="banner" id="banner1">
-            <h4>100%</h4>
-            <h4>CARNE</h4>
-            <h4>FRESCA</h4>
-        </div>
+        <main>
+            <section id="initial">
+                <div>
+                    <div class="logolateral">
+                        <h4>MELHOR BURGER DA NOITE DE 2015</h4>
+                        <h4>PELA REVISTA COMIDAS RÁPIDAS</h4>
+                    </div>
+                    <div id="logo">
+                        <h1>Burguer</h1>
+                        <span class="svgimg"><h4>GOURMET</h4></span>
+                        <h4>SÃO PAULO / DESDE 2007</h4>
+                    </div>
+                    <div class="logolateral">
+                        <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
+                        <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                    </div>
+                </div>
+            </section>
+            <section id="kitchen">
+                <span class="banners">
+                    <div class="banner" id="banner1">
+                        <h4>100%</h4>
+                        <h4>CARNE</h4>
+                        <h4>FRESCA</h4>
+                    </div>
+                    <div class="banner" id="banner2">
+                        <h4>Artesanais</h4>
+                        <h4>BURGERS</h4>
+                    </div>
+                    <div class="banner" id="banner3">
+                        <h4>Ingredientes</h4>
+                        <h4>NATURAIS</h4>
+                    </div>
+                </span>
+            </section>
+            <section id="news">
+
+            </section>
+            <section id="gallery">
+
+            </section>
+        </main>
     </body>
 </html>
