--- a/hardskills/modulohtml/restaurante/index.html
+++ b/hardskills/modulohtml/restaurante/index.html
@@ -22,43 +22,75 @@
         </div>
         <main>
             <section id="initial">
-                <div>
-                    <div class="logolateral">
-                        <h4>MELHOR BURGER DA NOITE DE 2015</h4>
-                        <h4>PELA REVISTA COMIDAS RÁPIDAS</h4>
-                    </div>
-                    <div id="logo">
-                        <h1>Burguer</h1>
-                        <span class="svgimg"><h4>GOURMET</h4></span>
-                        <h4>SÃO PAULO / DESDE 2007</h4>
-                    </div>
-                    <div class="logolateral">
-                        <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
-                        <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                <div class="growbox parallaxParent">
+                    <div class="parallax bg1"></div>
+                    <div id="logobanner">
+                        <div>
+                            <div class="logolateral ll1">
+                                <h4>MELHOR BURGER DA NOITE DE 2015</h4>
+                                <h4>PELA REVISTA COMIDAS RÁPIDAS</h4>
+                            </div>
+                            <div id="logo">
+                                <h1>Burguer</h1>
+                                <span class="svgimg"><h4>GOURMET</h4></span>
+                                <h4>SÃO PAULO / DESDE 2007</h4>
+                            </div>
+                            <div class="logolateral ll2">
+                                <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
+                                <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
             <section id="kitchen">
+                <div class="spikesbox">
+                    <span class="spikes"></span>
+                    <span class="afterspikes">
+                        <h2>NOSSA COZINHA</h2>
+                    </span>
+                </div>
                 <span class="banners">
-                    <div class="banner" id="banner1">
-                        <h4>100%</h4>
-                        <h4>CARNE</h4>
-                        <h4>FRESCA</h4>
+                    <div class="bannerbox">
+                        <div class="banner" id="banner1">
+                            <h4>100%</h4>
+                            <h4>CARNE</h4>
+                            <h4>FRESCA</h4>
+                        </div>
+                        <h3>Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. Sou um ótimo lugar para você contar sua história</h3>
                     </div>
-                    <div class="banner" id="banner2">
-                        <h4>Artesanais</h4>
-                        <h4>BURGERS</h4>
+                    <div class="bannerbox">
+                        <div class="banner" id="banner2">
+                            <h4>Artesanais</h4>
+                            <h4>BURGERS</h4>
+                        </div>
+                        <h3>Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. Sou um ótimo lugar para você contar sua história</h3>
                     </div>
-                    <div class="banner" id="banner3">
-                        <h4>Ingredientes</h4>
-                        <h4>NATURAIS</h4>
+                    <div class="bannerbox">
+                        <div class="banner" id="banner3">
+                            <h4>Ingredientes</h4>
+                            <h4>NATURAIS</h4>
+                        </div>
+                        <h3>Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. Sou um ótimo lugar para você contar sua história</h3>
                     </div>
                 </span>
             </section>
             <section id="news">
-
+                <div>
+                    <div class="parallax bg1"></div>
+                    <div class="growbox">
+                        <div class="quote">
+                            <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
+                            <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                            <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="gallery">
+
+            </section>
+            <section id="location">
 
             </section>
         </main>
