--- a/hardskills/modulohtml/restaurante/index.html
+++ b/hardskills/modulohtml/restaurante/index.html
@@ -26,18 +26,20 @@
                     <div class="parallax bg1"></div>
                     <div id="logobanner">
                         <div>
-                            <div class="logolateral ll1">
-                                <h4>MELHOR BURGER DA NOITE DE 2015</h4>
-                                <h4>PELA REVISTA COMIDAS RÁPIDAS</h4>
-                            </div>
-                            <div id="logo">
-                                <h1>Burguer</h1>
-                                <span class="svgimg"><h4>GOURMET</h4></span>
-                                <h4>SÃO PAULO / DESDE 2007</h4>
-                            </div>
-                            <div class="logolateral ll2">
-                                <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
-                                <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                            <div>
+                                <div class="logolateral ll1">
+                                    <h4>MELHOR BURGER DA NOITE DE 2015</h4>
+                                    <h4>PELA REVISTA COMIDAS RÁPIDAS</h4>
+                                </div>
+                                <div id="logo">
+                                    <h1>Burguer</h1>
+                                    <span class="svgimg"><h4>GOURMET</h4></span>
+                                    <h4>SÃO PAULO / DESDE 2007</h4>
+                                </div>
+                                <div class="logolateral ll2">
+                                    <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
+                                    <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -75,16 +77,30 @@
                     </div>
                 </span>
             </section>
-            <section id="news">
-                <div>
-                    <div class="parallax bg1"></div>
-                    <div class="growbox">
+            <section id="quotebox">
+                <div class="growbox parallaxParent">
+                    <div class="parallax bg2"></div>
+                    <div id="quotes" class="growbox">
                         <div class="quote">
-                            <h4>AV. BERNARDINO DE CAMPOS, 98</h4>
-                            <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
-                            <h4>SÃO PAULO, SP 12345-678  T: (11) 3456-7890</h4>
+                            <h2>“EU AINDA COMO UM HAMBURGER</h2>
+                            <h2>NO BALCÃO COM KETCHUP</h2>
+                            <h2>ESCORRENDO NO MEU ROSTO”</h2>
+                            
+                            <h3>Scarlett Johansson</h3>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section id="news">
+                <div class="spikesbox">
+                    <span class="spikes"></span>
+                    <span class="afterspikes">
+                        <h2>NOVIDADES</h2>
+                    </span>
+                </div>
+                <div>
+                    <div></div>
+                    <img src="https://static.wixstatic.com/media/b907f3_5a54a7e18df34b8f8e431952a51bf8ff.png/v1/fill/w_495,h_495,al_c,q_85,usm_0.66_1.00_0.01/b907f3_5a54a7e18df34b8f8e431952a51bf8ff.webp" />
                 </div>
             </section>
             <section id="gallery">
