--- a/hardskills/modulohtml/restaurante/index.html
+++ b/hardskills/modulohtml/restaurante/index.html
@@ -23,7 +23,7 @@
         <main>
             <section id="initial">
                 <div class="growbox parallaxParent">
-                    <div class="parallax bg1"></div>
+                    <div class="growbox parallax bg1"></div>
                     <div id="logobanner">
                         <div>
                             <div>
@@ -79,7 +79,7 @@
             </section>
             <section id="quotebox">
                 <div class="growbox parallaxParent">
-                    <div class="parallax bg2"></div>
+                    <div class="growbox parallax bg2"></div>
                     <div id="quotes" class="growbox">
                         <div class="quote">
                             <h2>“EU AINDA COMO UM HAMBURGER</h2>
