--- a/hardskills/modulohtml/restaurante/index.html
+++ b/hardskills/modulohtml/restaurante/index.html
@@ -6,20 +6,27 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <div class="topbar">
+        <header class="topbar">
             <div id="splash">
                 <span class="svgimg">
                     <h4>PEÇA</h4>
                     <h4>ONLINE</h4>
                 </span>
             </div>
-            <header>
-                
-            </header>
+            <nav>
+                <ul>
+                    <li><a href="#initial">HOME</a></li>
+                    <li><a href="#news">NOVIDADES</a></li>
+                    <li><a href="#kitchen">NOSSA COZINHA</a></li>
+                    <li><a href="" target="_self">MENU</a></li>
+                    <li><a href="" target="_self">PEDIDOS ONLINE</a></li>
+                    <li><a href="#location">LOCALIZAÇÃO E CONTATO</a></li>
+                </ul>
+            </nav>
             <div id="social">
 
             </div>
-        </div>
+        </header>
         <main>
             <section id="initial">
                 <div class="growbox parallaxParent">
@@ -98,17 +105,68 @@
                         <h2>NOVIDADES</h2>
                     </span>
                 </div>
-                <div>
-                    <div></div>
-                    <img src="https://static.wixstatic.com/media/b907f3_5a54a7e18df34b8f8e431952a51bf8ff.png/v1/fill/w_495,h_495,al_c,q_85,usm_0.66_1.00_0.01/b907f3_5a54a7e18df34b8f8e431952a51bf8ff.webp" />
+                <div id="mosaico" class="growbox">
+                    <div>
+                        <div>
+                            <h3>CONHEÇA O NOSSO</h3>
+                            <h3>BURGER MAIS PROCURADO</h3>
+                            <i>O Chama</i>
+                            <p>Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto.</p>
+                        </div>
+                        <img src="https://static.wixstatic.com/media/b907f3_5a54a7e18df34b8f8e431952a51bf8ff.png/v1/fill/w_495,h_495,al_c,q_85,usm_0.66_1.00_0.01/b907f3_5a54a7e18df34b8f8e431952a51bf8ff.webp" />
+                    </div>
+                    <div>
+                        <img src="https://static.wixstatic.com/media/b907f3_0d8c9719b2a84db6989be95b78fae114.jpg/v1/fill/w_492,h_486,al_c,q_80,usm_0.66_1.00_0.01/b907f3_0d8c9719b2a84db6989be95b78fae114.webp" />
+                        <div>
+                            <i>Já experimentou</i>
+                            <h3>NOSSOS PRATOS</h3>
+                            <h3>VEGETARIANOS?</h3>
+                            <p>Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h3>BATATA FRITA</h3>
+                            <h3>DUPLA</h3>
+                            <div>
+                                <span></span>
+                                <h4>POR</h4>
+                                <span></span>
+                            </div>
+                            <i>R$1.75</i>
+                            <p>Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto.</p>
+                        </div>
+                        <img src="https://static.wixstatic.com/media/b907f3_71c4dc92611a48d3b812f431fc51662c.png/v1/fill/w_495,h_492,al_c,q_85,usm_0.66_1.00_0.01/b907f3_71c4dc92611a48d3b812f431fc51662c.webp" />
+                    </div>
                 </div>
             </section>
             <section id="gallery">
-
+                <div class="spikesbox">
+                    <span class="spikes"></span>
+                    <span class="afterspikes">
+                        <h2>GALERIA GOURMET</h2>
+                    </span>
+                </div>
+                <div id="showbox" class="growbox">
+                    <img src="https://static.wixstatic.com/media/8a3e6d_5687e97528574704a9d1061f5fb09357~mv2.jpg/v1/fill/w_980,h_642,fp_0.59_0.53,q_90/8a3e6d_5687e97528574704a9d1061f5fb09357~mv2.jpg" />
+                </div>
             </section>
             <section id="location">
+                <div class="spikesbox">
+                    <span class="spikes"></span>
+                    <span class="afterspikes">
+                        <h2>LOCALIZAÇÃO E CONTATO</h2>
+                        <h4>AV. BERNARDINO DE CAMPOS, 98 - SÃO PAULO, SP 12345-678</h4>
+                    </span>
+                </div>
+                <div>
+                    <form action="">
 
+                    </form>
+                    <iframe width="469" height="228" id="gmap_canvas" src="https://maps.google.com/maps?q=AV.%20BERNARDINO%20DE%20CAMPOS,%2098%20-%20S%C3%83O%20PAULO,%20SP%2012345-678&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                </div>
             </section>
         </main>
+        <footer>© 2023 por Burger Gourmet. Orgulhosamente criado com Wix.com</footer>
     </body>
 </html>
