--- a/hardskills/modulohtml/restaurante/index.html
+++ b/hardskills/modulohtml/restaurante/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>Fastfood Burguer Gourmet</title>
         <link rel="stylesheet" href="https://static.parastorage.com/services/santa-resources/resources/viewer/user-site-fonts/v15/languages-woff2.css">
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <!--Referencia https://www.wix.com/templatespt/burger-cornerpt-->
     </head>
     <body>
         <header class="topbar">
