--- a/hardskills/programacao/aula7/index.html
+++ b/hardskills/programacao/aula7/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>RedLips Fandom</title>
+        <title></title>
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
