--- a/hardskills/programacao/aula7/index.html
+++ b/hardskills/programacao/aula7/index.html
@@ -40,6 +40,14 @@
                     </section>
                 </main>
             </div>
+            <section id="about">
+                <img />
+                <div>
+                    <h3></h3>
+                    <h4></h4>
+                    <a></a>
+                </div>
+            </section>
             <footer>
                 
             </footer>
