--- a/hardskills/programacao/aula7/index.html
+++ b/hardskills/programacao/aula7/index.html
@@ -47,6 +47,7 @@
                     <h4></h4>
                     <a></a>
                 </div>
+                <img />
             </section>
             <footer>
                 
