--- a/hardskills/programacao/aula10/index.html
+++ b/hardskills/programacao/aula10/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Calculadora</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <form name="calculator">
             <input type="number" id="valuea" name="valuea" required />
-            <input type="number" id="valueb" name="valueb" required />
             <input type="submit" name="operator" value="+" />
             <input type="submit" name="operator" value="-" />
             <input type="submit" name="operator" value="/" />
             <input type="submit" name="operator" value="*" />
             <input type="submit" name="operator" value="^" />
             <input type="submit" name="operator" value="%" />
+            <input type="number" id="valueb" name="valueb" required />
         </form>
         <div>
             <h3>Result</h3>
