--- a/hardskills/programacao/aula10/index.html
+++ b/hardskills/programacao/aula10/index.html
@@ -6,21 +6,32 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form name="calculator">
-            <input type="number" id="valuea" name="valuea" required />
-            <input type="submit" name="operator" value="+" />
-            <input type="submit" name="operator" value="-" />
-            <input type="submit" name="operator" value="/" />
-            <input type="submit" name="operator" value="*" />
-            <input type="submit" name="operator" value="^" />
-            <input type="submit" name="operator" value="%" />
-            <input type="number" id="valueb" name="valueb" required />
-        </form>
-        <div>
-            <h3>Result</h3>
-            <h4 id="resultBox"></h4>
-        </div>
-        
+        <header>
+            <h1>Calculadora</h1>
+        </header>
+        <main>
+            <div>
+                <h3>Result</h3>
+                <h4 id="resultBox"></h4>
+            </div>
+            <form name="calculator">
+                <span>
+                    <input type="number" id="valuea" name="valuea" required />
+                    <input type="number" id="valueb" name="valueb" required />
+                </span>
+                <div>
+                    <input type="submit" name="operator" value="+" />
+                    <input type="submit" name="operator" value="-" />
+                    <input type="submit" name="operator" value="/" />
+                    <input type="submit" name="operator" value="*" />
+                    <input type="submit" name="operator" value="^" />
+                    <input type="submit" name="operator" value="%" />
+                </div>
+            </form>
+        </main>
+        <footer>
+            Direitos reservados a Luis Gustavo C. Z. Pereira
+        </footer>
         <script src="main.js"></script>
     </body>
 </html>
