--- a/hardskills/programacao/aula12/index.html
+++ b/hardskills/programacao/aula12/index.html
@@ -8,11 +8,13 @@
         <div>
             <div>
                 <div id="quadro-negro">
-                    <div id="quadro-escrita">
-                        
-                    </div>
+                    
                 </div>
             </div>
+            <span>
+                <h2 id="quadros">Quadros: </h1>
+                <h3 id="linhas">Linhas: </h1>
+            </span>
         </div>
     </body>
     <script src="main.js"></script>
