--- a/hardskills/programacao/aula13/index.html
+++ b/hardskills/programacao/aula13/index.html
@@ -4,6 +4,10 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Corridas</title>
         <link rel="stylesheet" href="style.css">
+        <meta property="og:title" content="Corridas" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/hardskills/programacao/aula13/" />
+        <meta property="og:image" content="f1.jpg" />
     </head>
     <body>
         <header>
