--- a/hardskills/programacao/aula14/index.html
+++ b/hardskills/programacao/aula14/index.html
@@ -4,10 +4,10 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Corridas</title>
         <link rel="stylesheet" href="style.css">
-        <meta property="og:title" content="Corridas" />
+        <meta property="og:title" content="Ordene seu Vetor" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/hardskills/programacao/aula13/" />
-        <meta property="og:image" content="f1.jpg" />
+        <meta property="og:image" content="ordenacao.jfif" />
     </head>
     <body>
         <header><h1>Ordene seu Vetor</h1></header>
