--- a/hardskills/programacao/aula15/index.html
+++ b/hardskills/programacao/aula15/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <title>Jogo da Velha</title>
         <link rel="stylesheet" href="style.css">
+        <meta property="og:title" content="Jogo da Velha" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/hardskills/programacao/aula15/" />
+        <meta property="og:image" content="images/ox.png" />
     </head>
     <body>
         <div>
