--- a/hardskills/programacao/aula15/index.html
+++ b/hardskills/programacao/aula15/index.html
@@ -21,8 +21,8 @@
                 <h2>Jogo da Velha</h2>
                 <nav>
                     <button onclick="Start (3)">Modo Rapido</button>
-                    <button style="display: none;" onclick="Start (9)">Modo Medio</button>
-                    <button style="display: none;" onclick="Start (27)">Modo Longo</button>
+                    <button style="display: block;" onclick="Start (9)">Modo Medio</button>
+                    <button style="display: block;" onclick="Start (27)">Modo Longo</button>
                 </nav>
             </header>
         </div>
