--- a/hardskills/programacao/corrida/index.html
+++ b/hardskills/programacao/corrida/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <title>Jogo da Velha</title>
+        <title>Jogo de Corrida</title>
         <link rel="stylesheet" href="style.css">
         <meta property="og:title" content="Jogo da Velha" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/hardskills/programacao/aula15/" />
-        <meta property="og:image" content="images/ox.png" />
+        <meta property="og:image" content="images/cars/car_black_1.png" />
     </head>
     <body>
         <div>
