--- a/hardskills/programacao/corrida/index.html
+++ b/hardskills/programacao/corrida/index.html
@@ -4,9 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Jogo de Corrida</title>
         <link rel="stylesheet" href="style.css">
-        <meta property="og:title" content="Jogo da Velha" />
+        <meta property="og:title" content="Jogo de Corrida" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/hardskills/programacao/aula15/" />
+        <meta property="og:url" content="https://luisgustavoczp.github.io/my_first_steps/hardskills/programacao/corrida/" />
         <meta property="og:image" content="images/cars/car_black_1.png" />
     </head>
     <body>
