--- a/hardskills/programacao/lojacrediario/index.html
+++ b/hardskills/programacao/lojacrediario/index.html
@@ -20,15 +20,17 @@
                 <span>
                     <button onclick="RegistrarCompra ()">Registrar</button>
                     <button onclick="CalcularJuros ()">Calcular</button>
+                    <button onclick="AgruparClientes ()">Cliente</button>
+                    <button onclick="AgruparVencimento ()">Data</button>
                 </span>
                 <span id="log"></span>
             </section>
-            <section id="compras">
+            <section id="compras" class="tabela">
                 <ul>
 
                 </ul>
             </section>
-            <section id="juros" class="hidden">
+            <section id="juros" class="tabela hidden">
                 <ul>
 
                 </ul>
