--- a/hardskills/programacao/loteriatabajara/index.html
+++ b/hardskills/programacao/loteriatabajara/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Bingo Tabajara</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <main>
-        <canvas id="canvas"></canvas>
+        <h1>Bingo Tabajara</h1>
+        <div class="container">
+            <!--<canvas id="canvas"></canvas>-->
+            <div id="winners">
+
+            </div>
+            <button onclick="startPlay()">Sortear</button>
+        </div>
     </main>
     <script src="index.js"></script>
 </html>
